--- a/examples/rtm_ker-vc-sys-seq_reduced/m4.tex
+++ b/examples/rtm_ker-vc-sys-seq_reduced/m4.tex
@@ -6,7 +6,7 @@
           minimum width = 2cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {ms4};
+    \node[] at (ms4.center) {\texttt{ms4}};
 
 
     \node[rectangle,
@@ -14,16 +14,16 @@
         fill = yellow!30,
         minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (sys) at (1.5,1) {};
-    \node[] at (sys.center) {sys};
+        ] (sys) at (-1.5,1) {};
+    \node[] at (sys.center) {\texttt{c\_sys}};
 
     \node[rectangle,
         draw,
         fill = yellow!30,
         minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ker) at (-1.5,1) {};
-    \node[] at (ker.center) {ker};
+        ] (ker) at (1.5,1) {};
+    \node[] at (ker.center) {\texttt{c\_ker}};
 
     \node[rectangle,
         draw,
@@ -31,14 +31,14 @@
         minimum width = 1cm, 
         minimum height = 0.5cm
         ] (vc) at (0,1) {};
-    \node[] at (vc.center) {vc};
+    \node[] at (vc.center) {\texttt{c\_vc}};
 
     \node[rectangle,
         draw,
         minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ms1) at (-1.5,2) {};
-    \node[] at (ms1.center) {ms};
+        ] (ms1) at (1.5,2) {};
+    \node[] at (ms1.center) {\texttt{ms}};
 
     %\node[rectangle,
     %    draw,
