--- a/examples/ker_vs-sys-seq_reduced/m2.tex
+++ b/examples/ker_vs-sys-seq_reduced/m2.tex
@@ -6,7 +6,7 @@
           minimum width = 2cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {ms4};
+    \node[] at (ms4.center) {\texttt{ms4}};
 
 
     \node[rectangle,
@@ -15,7 +15,7 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (sys) at (-1,1) {};
-    \node[] at (sys.center) {sys};
+    \node[] at (sys.center) {\texttt{c\_sys}};
 
     \node[rectangle,
         draw,
@@ -23,14 +23,14 @@
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (vc) at (1,1) {};
-    \node[] at (vc.center) {ker};
+    \node[] at (vc.center) {\texttt{c\_ker}};
 
     \node[rectangle,
         draw,
         minimum width = 1.5cm, 
         minimum height = 0.5cm
         ] (ms3) at (1,2) {};
-    \node[] at (ms3.center) {ms};
+    \node[] at (ms3.center) {\texttt{ms}};
 
 %     \node[rectangle,
 %     minimum width = 1cm, 
