--- a/examples/ker_vs-sys-seq_reduced/m3.tex
+++ b/examples/ker_vs-sys-seq_reduced/m3.tex
@@ -6,7 +6,7 @@
           minimum width = 2cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {ms4};
+    \node[] at (ms4.center) {\texttt{ms4}};
 
 
     %\node[rectangle,
@@ -21,16 +21,22 @@
         fill = yellow!30,
         minimum width = 1.5cm, 
         minimum height = 0.5cm
-        ] (ker) at (-1,1) {};
-    \node[] at (ker.center) {ker};
+        ] (ker) at (1,1) {};
+    \node[] at (ker.center) {\texttt{c\_ker}};
 
     \node[rectangle,
         draw,
         fill = yellow!30,
         minimum width = 1.5cm, 
         minimum height = 0.5cm
-        ] (sys) at (1,1) {};
-    \node[] at (sys.center) {sys};
+        ] (sys) at (-1,1) {};
+    \node[] at (sys.center) {\texttt{c\_sys}};
+
+    \node[rectangle,
+        minimum width = 1.5cm, 
+        minimum height = 0.5cm
+        ] (ms3) at (1,2) {};
+    \node[] at (ms3.center) {};
 
 %     \node[rectangle,
 %     minimum width = 1cm, 
