--- a/examples/ker_vs-hv-sys-seq_reduced/m2.tex
+++ b/examples/ker_vs-hv-sys-seq_reduced/m2.tex
@@ -6,8 +6,13 @@
           minimum width = 1.6cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
-    \node[] at (ms4.center) {\texttt{ms3}};
+    \node[] at (ms4.center) {\texttt{ms4}};
 
+    \node[rectangle,
+    minimum width = 1cm, 
+    minimum height = 0.5cm
+    ] (lab) at (0,-.5) {};
+  \node[] at (lab.center) {$c_2$};
 
     \node[rectangle,
         draw,
@@ -22,48 +27,27 @@
         fill = yellow!30,
         minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ker) at (.6,.8) {};
-    \node[] at (ker.center) {\texttt{c\_ker}};
+        ] (vc) at (.6,.8) {};
+    \node[] at (vc.center) {\texttt{c\_ker}};
 
     \node[rectangle,
         draw,
         minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ms1) at (.6,1.6) {};
-    \node[] at (ms1.center) {\texttt{ms}};
-
-    %\node[rectangle,
-    %    draw,
-    %    minimum width = 1.5cm, 
-    %    minimum height = 0.5cm
-    %    ] (ms2) at (-1,1) {};
-    %\node[] at (ms2.center) {ms};
+        ] (ms3) at (.6,1.6) {};
+    \node[] at (ms3.center) {\texttt{ms}};
 
 %     \node[rectangle,
-%     minimum width = 1.5cm, 
+%     minimum width = 1cm, 
 %     minimum height = 0.5cm
 %     ] (label) at (0,-0.5) {};
-% \node[] at (label.center) {m3c};
-
-
-\node[rectangle,
-minimum width = 1cm, 
-minimum height = 0.5cm
-] (label) at (0,-.5) {};
-\node[] at (label.center) {$a'$};
-
-\node[rectangle,
-minimum width = 1cm, 
-minimum height = 0.5cm
-] (label2) at (-1.5,0) {};
-\node[] at (label2.center) {};
+% \node[] at (label.center) {m2b};
 
 
     \path[every node/.style={font=\sffamily\small}]
     %host1 path
-    (ms1) edge [] node [right] {} (ker.north)
-    (ker) edge [] node [right] {} (ms4.north)
-    %(ms2) edge [] node [right] {} (ms4.north) 
+    (ms3) edge [] node [right] {} (vc.north)
+    (vc) edge [] node [right] {} (ms4.north) 
     (sys) edge [] node [right] {} (ms4.north) ;
 
 
