--- a/examples/rtm_ker-vc-sys-seq/m3-mod.tex
+++ b/examples/rtm_ker-vc-sys-seq/m3-mod.tex
@@ -3,7 +3,7 @@
     \node[rectangle,
           draw,
           fill = green!30,
-          minimum width = 2cm, 
+          minimum width = 1.6cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
     \node[] at (ms4.center) {\texttt{ms3}};
@@ -12,33 +12,32 @@
     \node[rectangle,
         draw,
         fill = yellow!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (sys) at (-1,1) {};
+        ] (sys) at (-.6,.8) {};
     \node[] at (sys.center) {\texttt{c\_sys}};
 
     \node[rectangle,
         draw,
         fill = yellow!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ker) at (1,2) {};
+        ] (ker) at (.6,1.6) {};
     \node[] at (ker.center) {\texttt{c\_ker}};
 
     \node[rectangle,
         draw,
-        fill = green!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ms1) at (1,3) {};
+        ] (ms1) at (.6,2.4) {};
     \node[] at (ms1.center) {\texttt{ms1}};
 
     \node[rectangle,
         draw,
         fill = green!30,
-        minimum width = 1.5cm, 
+        minimum width = 1cm, 
         minimum height = 0.5cm
-        ] (ms2) at (1,1) {};
+        ] (ms2) at (.6,.8) {};
     \node[] at (ms2.center) {\texttt{ms2}};
 
 %     \node[rectangle,
@@ -51,7 +50,7 @@
 \node[rectangle,
 minimum width = 1cm, 
 minimum height = 0.5cm
-] (label) at (0,-.7) {};
+] (label) at (0,-.5) {};
 \node[] at (label.center) {$a$};
 
 \node[rectangle,
