--- a/examples/rtm_ker-vc-sys-seq_reduced-copy/m3-mod.tex
+++ b/examples/rtm_ker-vc-sys-seq_reduced-copy/m3-mod.tex
@@ -3,7 +3,7 @@
     \node[rectangle,
           draw,
           fill = green!30,
-          minimum width = 1.6cm, 
+          minimum width = 2cm, 
           minimum height = 0.5cm
           ] (ms4) at (0,0) {};
     \node[] at (ms4.center) {\texttt{ms3}};
@@ -12,24 +12,25 @@
     \node[rectangle,
         draw,
         fill = yellow!30,
-        minimum width = 1cm, 
+        minimum width = 1.5cm, 
         minimum height = 0.5cm
-        ] (sys) at (-.6,.8) {};
+        ] (sys) at (-1,1) {};
     \node[] at (sys.center) {\texttt{c\_sys}};
 
     \node[rectangle,
         draw,
         fill = yellow!30,
-        minimum width = 1cm, 
+        minimum width = 1.5cm, 
         minimum height = 0.5cm
-        ] (ker) at (.6,.8) {};
+        ] (ker) at (1,1) {};
     \node[] at (ker.center) {\texttt{c\_ker}};
 
     \node[rectangle,
         draw,
-        minimum width = 1cm, 
+        fill = green!30,
+        minimum width = 1.5cm, 
         minimum height = 0.5cm
-        ] (ms1) at (.6,1.6) {};
+        ] (ms1) at (1,2) {};
     \node[] at (ms1.center) {\texttt{ms}};
 
     %\node[rectangle,
@@ -49,14 +50,14 @@
 \node[rectangle,
 minimum width = 1cm, 
 minimum height = 0.5cm
-] (label) at (0,-.5) {};
+] (label) at (0,-.7) {};
 \node[] at (label.center) {$a'$};
 
 \node[rectangle,
 minimum width = 1cm, 
 minimum height = 0.5cm
-] (label2) at (-1.5,0) {};
-\node[] at (label2.center) {};
+] (label) at (-1.5,0) {};
+\node[] at (label.center) {};
 
 
     \path[every node/.style={font=\sffamily\small}]
