--- a/examples/ker_vs-hv-sys-seq_reduced/m7.tex
+++ b/examples/ker_vs-hv-sys-seq_reduced/m7.tex
@@ -12,7 +12,7 @@
   minimum width = 1cm, 
   minimum height = 0.5cm
   ] (lab) at (0,-.5) {};
-\node[] at (lab.center) {$c_7$};
+\node[] at (lab.center) {$c_{10}$};
 
   \node[rectangle,
       draw,
